data/derived/sp14/progs/unify/prog1092.ml.out
Characters 179-204:
  buildSine(buildhelper 0 (depth-1))
           ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a -> expr
       but an expression was expected of type expr
